lattigo_ckks_ops_boot/libLATTIGO_CKKS_OPS.h

/* Code generated by cmd/cgo; DO NOT EDIT. */

/* package command-line-arguments */


#line 1 "cgo-builtin-export-prolog"

#include <stddef.h>

#ifndef GO_CGO_EXPORT_PROLOGUE_H
#define GO_CGO_EXPORT_PROLOGUE_H

#ifndef GO_CGO_GOSTRING_TYPEDEF
typedef struct { const char *p; ptrdiff_t n; } _GoString_;
extern size_t _GoStringLen(_GoString_ s);
extern const char *_GoStringPtr(_GoString_ s);
#endif

#endif

/* Start of preamble from import "C" comments.  */


#line 3 "ckks_ops.go"

#include <stdint.h>
#include <stdlib.h>
#include <stdbool.h>

#line 1 "cgo-generated-wrapper"


/* End of preamble from import "C" comments.  */


/* Start of boilerplate cgo prologue.  */
#line 1 "cgo-gcc-export-header-prolog"

#ifndef GO_CGO_PROLOGUE_H
#define GO_CGO_PROLOGUE_H

typedef signed char GoInt8;
typedef unsigned char GoUint8;
typedef short GoInt16;
typedef unsigned short GoUint16;
typedef int GoInt32;
typedef unsigned int GoUint32;
typedef long long GoInt64;
typedef unsigned long long GoUint64;
typedef GoInt64 GoInt;
typedef GoUint64 GoUint;
typedef size_t GoUintptr;
typedef float GoFloat32;
typedef double GoFloat64;
#ifdef _MSC_VER
#if !defined(__cplusplus) || _MSVC_LANG <= 201402L
#include <complex.h>
typedef _Fcomplex GoComplex64;
typedef _Dcomplex GoComplex128;
#else
#include <complex>
typedef std::complex<float> GoComplex64;
typedef std::complex<double> GoComplex128;
#endif
#else
typedef float _Complex GoComplex64;
typedef double _Complex GoComplex128;
#endif

/*
  static assertion to make sure the file is being used on architecture
  at least with matching size of GoInt.
*/
typedef char _check_for_64_bit_pointer_matching_GoInt[sizeof(void*)==64/8 ? 1:-1];

#ifndef GO_CGO_GOSTRING_TYPEDEF
typedef _GoString_ GoString;
#endif
typedef void *GoMap;
typedef void *GoChan;
typedef struct { void *t; void *v; } GoInterface;
typedef struct { void *data; GoInt len; GoInt cap; } GoSlice;

#endif

/* End of boilerplate cgo prologue.  */

#ifdef __cplusplus
extern "C" {
#endif

extern uintptr_t CKKS_CreateVM(int logN, int levels, int logDefaultScale, int ctCapacity);
extern void CKKS_FreeVM(uintptr_t h);
extern int CKKS_Slots(uintptr_t h);
extern int CKKS_LogN(uintptr_t h);
extern int CKKS_MaxLevel(uintptr_t h);
extern int CKKS_LogDefaultScale(uintptr_t h);
extern int CKKS_CTLevel(uintptr_t h, int idx);
extern int CKKS_CTLog2Scale(uintptr_t h, int idx);
extern void CKKS_GenRotKey(uintptr_t h, int rot);
extern void CKKS_EncryptTo(uintptr_t h, int dst, double* data, int n, int level, int log2Scale);
extern void CKKS_DecryptFrom(uintptr_t h, int src, double* out, int outN);
extern void CKKS_OpMulCC(uintptr_t h, int dst, int a, int b);
extern void CKKS_OpMulCP_Const(uintptr_t h, int dst, int a, double c);
extern void CKKS_OpRescale(uintptr_t h, int dst, int a);
extern void CKKS_OpDropLevel(uintptr_t h, int dst, int a, int down);
extern int CKKS_BootEnable(uintptr_t h);
extern int CKKS_BootstrapTo(uintptr_t h, int dst, int src);

#ifdef __cplusplus
}
#endif